refactor: Rename project and update metadata
- Renamed the project from "getafinance---control-inteligente" to "finanzas-brisa" in package.json and metadata.json.
- Updated the application title in index.html to "Finanzas Brisa".
- Added `has_paid` property to the `Client` type.
- Adjusted styling and responsiveness for transaction cards and illustrations.
- Modified the default goal amount and added a vault input for better financial tracking.
- Implemented custom scrollbar styles.
- Added `Sparkles` illustration and `user-scalable=0` to viewport meta tag.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>GetaFinance</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -11,9 +11,11 @@
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
             background-color: #f8fafc;
+            -webkit-tap-highlight-color: transparent;
         }
         .custom-scrollbar::-webkit-scrollbar {
           width: 6px;
+          height: 4px;
         }
         .custom-scrollbar::-webkit-scrollbar-track {
           background: transparent;
@@ -21,6 +23,13 @@
         .custom-scrollbar::-webkit-scrollbar-thumb {
           background: #e2e8f0;
           border-radius: 10px;
+        }
+        .no-scrollbar::-webkit-scrollbar {
+          display: none;
+        }
+        .no-scrollbar {
+          -ms-overflow-style: none;
+          scrollbar-width: none;
         }
     </style>
 <script type="importmap">
