--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>GetaFinance</title>
+    <title>GetaFinance - Brisa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #f8fafc;
+            background-color: #FCFBFE;
             -webkit-tap-highlight-color: transparent;
+            margin: 0;
+            padding: 0;
         }
         .custom-scrollbar::-webkit-scrollbar {
           width: 6px;
@@ -47,5 +49,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- CRITICAL: Carga el punto de entrada de la aplicación -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
