--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>GetaFinance - Brisa</title>
+    
+    <!-- Favicon con el logo B de Brisa (Rosa y Violeta) -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='g' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%23A78BFA' /><stop offset='100%' style='stop-color:%23FDA4AF' /></linearGradient></defs><rect width='100' height='100' rx='30' fill='url(%23g)'/><text x='50%' y='54%' dominant-baseline='middle' text-anchor='middle' font-family='Arial, sans-serif' font-weight='900' font-size='60' fill='white'>B</text></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='g' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%23A78BFA' /><stop offset='100%' style='stop-color:%23FDA4AF' /></linearGradient></defs><rect width='100' height='100' rx='30' fill='url(%23g)'/><text x='50%' y='54%' dominant-baseline='middle' text-anchor='middle' font-family='Arial, sans-serif' font-weight='900' font-size='60' fill='white'>B</text></svg>">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -49,7 +54,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- CRITICAL: Carga el punto de entrada de la aplicación -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
