--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>GetaFinance - Brisa</title>
+    <title>Finanzas Brisa</title>
     
-    <!-- Favicon con el logo B de Brisa (Rosa y Violeta) -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='g' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%23A78BFA' /><stop offset='100%' style='stop-color:%23FDA4AF' /></linearGradient></defs><rect width='100' height='100' rx='30' fill='url(%23g)'/><text x='50%' y='54%' dominant-baseline='middle' text-anchor='middle' font-family='Arial, sans-serif' font-weight='900' font-size='60' fill='white'>B</text></svg>">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='g' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%23A78BFA' /><stop offset='100%' style='stop-color:%23FDA4AF' /></linearGradient></defs><rect width='100' height='100' rx='30' fill='url(%23g)'/><text x='50%' y='54%' dominant-baseline='middle' text-anchor='middle' font-family='Arial, sans-serif' font-weight='900' font-size='60' fill='white'>B</text></svg>">
+    <!-- Meta tags para cuando compartes el link -->
+    <meta property="og:title" content="Finanzas Brisa">
+    <meta property="og:description" content="Mi control personal de gastos e ingresos.">
+    <meta property="og:image" content="https://res.cloudinary.com/ddbqqeh8x/image/upload/v1768665571/Captura_de_pantalla_2026-01-17_125644_lxz4l4.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Finanzas Brisa">
+    <meta name="twitter:image" content="https://res.cloudinary.com/ddbqqeh8x/image/upload/v1768665571/Captura_de_pantalla_2026-01-17_125644_lxz4l4.png">
+
+    <!-- Favicon con el logo real de Brisa -->
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/ddbqqeh8x/image/upload/v1768665571/Captura_de_pantalla_2026-01-17_125644_lxz4l4.png">
+    <link rel="apple-touch-icon" href="https://res.cloudinary.com/ddbqqeh8x/image/upload/v1768665571/Captura_de_pantalla_2026-01-17_125644_lxz4l4.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
